# DNS-IOT

./: CMakeLists.txt  README.md  host.cpp  host.h  main.cpp  manager.cpp  manager.h
database/: ConnectionPool.cpp  ConnectionPool.h  HostRepository.cpp  HostRepository.h
tools/: datatype.cpp  datatype.h  logger.h
